--- a/finalPrj/.vscode/settings.json
+++ b/finalPrj/.vscode/settings.json
@@ -2,5 +2,5 @@
   "java.compile.nullAnalysis.mode": "automatic",
   "liveServer.settings.port": 5501,
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "mwpb.java-prettier-formatter"
 }
